solved grid/visibility problem for pop up windows

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,7 +97,7 @@ body{
   grid-row: 2/ 3;
   border-radius: 5px;
   margin: auto;
-  display: none;
+  visibility: hidden;
 }
 
 #gameEvilOutroMessage {
@@ -124,15 +124,44 @@ body{
 }
 
 #gameGoodOutro {
-  position: absolute;
-  z-index: 10;
-  width: 400px;
-  height: 400px;
-  top: 200px;
-  left: 500px;
-  background-color: #e1e1ff;
-  color: #1b62e6;
-  display: none;
+  display: grid;
+  grid-template-columns: 1fr 8fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  z-index: 16;
+  width: 500px;
+  height: 500px;
+  background-color: #252526;
+  color: #7F1331;
+  text-align: center;
+  grid-column: 3 / 4;
+  grid-row: 2/ 3;
+  border-radius: 5px;
+  margin: auto;
+  color: #0078CF;
+  background-color: #ebebf5;
+  visibility: hidden;
+}
+
+#GameGoodOutroMessage {
+  grid-column: 2 / 3 ;
+  grid-row: 2 / 3 ;
+  margin: auto;
+}
+
+#goodYouWin {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+  margin: auto;
+}
+
+#goodBtnReplay {
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
+  margin: auto;
+  width: 150px;
+  height: 100px;
+  font-size: 30pt;
+  background-color: #c0c0c4;
 }
 
 .evilEndMessage {
@@ -206,6 +235,10 @@ body{
   grid-column: 2 / 3 ;
   grid-row: 2 / 3;
   color: #0078CF;
+  font-weight: bold;
+  font-size: 20pt;
+  font-family: "Arno Pro";
+  font-style: italic;
 
   /* angelic font */
 }
